Fix mobile z buttons spacing (#246)
* Fix mobile z buttons spacing via CSS

* Fix mobile z list alignment

* correc top position

---------

--- a/web-client/src/style.css
+++ b/web-client/src/style.css
@@ -429,9 +429,9 @@ button:focus-visible {
 .mobile-z-buttons {
   position: absolute;
   right: 100%;
-  top: 0;
+  top: 4px;
   display: none;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 36px;
   gap: 5px;
 }
